# bearhold-studio

./: .gitignore  Cargo.toml  INSTALL.md  function.py  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  state.rs
apps/desktop/src-tauri/src/dump/: detect.rs  export.rs  import.rs  mod.rs  tool_locator.rs
apps/desktop/src-tauri/src/tools/: cache.rs  download.rs  manifest.json  manifest.rs  mod.rs
apps/desktop/src-tauri/tools/: README.md
apps/web/: package.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/compare/: page.tsx
apps/web/app/connections/: page.tsx
apps/web/app/connections/[id]/mongo/: page.tsx
apps/web/app/connections/[id]/redis/: page.tsx
apps/web/app/connections/[id]/schema/: page.tsx
apps/web/app/connections/[id]/sql/: page.tsx
apps/web/app/connections/[id]/tables/[schema]/[table]/: page.tsx
apps/web/app/data-diff/: page.tsx
apps/web/app/diff/: page.tsx
apps/web/app/export/: page.tsx
apps/web/app/import/: page.tsx
apps/web/app/licenses/: page.tsx
apps/web/app/migrations/: page.tsx
apps/web/app/sql/: page.tsx
apps/web/components/: AppShell.tsx  BulkInsertDialog.tsx  CommandPalette.tsx  ConnectionForm.tsx  DdlDialog.tsx  ImportConnectionsDialog.tsx  KeyboardShortcutsDialog.tsx  MongoBrowser.tsx  PlanViewer.tsx  QueryHistoryPanel.tsx  RedisBrowser.tsx  ResultTable.tsx  SnippetsPanel.tsx  SqlEditor.tsx  TableDetailsDrawer.tsx  ToolInstallPrompt.tsx  UpdateBanner.tsx
apps/web/components/compare/: CompareTopBar.tsx  DataDiffPanel.tsx  SchemaDiffPanel.tsx
apps/web/lib/: api.ts  buildDdl.ts  dataDiff.ts  dataDiffSql.ts  detectEditableQuery.ts  engineDataTypes.ts  engineVersion.ts  errorHints.ts  exporters.ts  formatSql.ts  importConnections.ts  openTable.ts  parseCsv.ts  platform.ts  schemaDiff.ts  sqlCompletion.ts  sqlIdent.ts  sqlLiteral.ts  tableGraph.ts  theme.ts  tools.ts  types.ts  updater.ts
apps/web/store/: connections.ts  migrationLog.ts  queryHistory.ts  schemaCache.ts  serverInfoCache.ts  snippets.ts  sqlTabs.ts  tableLayouts.ts  toolCache.ts
dev/: README.md  docker-compose.yml  mongo-seed.js  redis-seed.sh
scripts/: fetch-desktop-tools.mjs
scripts/test-e2e/: index.ts  scenarios.ts
services/core/src/: connection.rs  driver.rs  lib.rs  query.rs  server_info.rs
services/drivers/mongodb/: Cargo.toml
services/drivers/mongodb/src/: lib.rs
services/drivers/mysql/src/: decode.rs  introspect.rs  lib.rs
services/drivers/postgres/src/: decode.rs  lib.rs
services/drivers/redis/: Cargo.toml
services/drivers/redis/src/: lib.rs
services/drivers/sqlite/src/: lib.rs
test-results/: PROBLEMS.md  REPORT.md
