[package]
name = "dbstudio-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "dbstudio Tauri 2 desktop shell."

[lib]
name = "dbstudio_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
dbstudio-core = { path = "../../../services/core" }
dbstudio-driver-postgres = { path = "../../../services/drivers/postgres" }
dbstudio-driver-mysql = { path = "../../../services/drivers/mysql" }
dbstudio-driver-sqlite = { path = "../../../services/drivers/sqlite" }
dbstudio-driver-mongodb = { path = "../../../services/drivers/mongodb" }
dbstudio-driver-redis = { path = "../../../services/drivers/redis" }
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-updater = { workspace = true }
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }

# Tool-bundle downloader: HTTP fetch with streamed progress, SHA-256
# verification of the archive, then extraction. Used by the on-demand
# tool installer (pg_dump, mysqldump, mongodump, ...).
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "stream",
] }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
futures-util = "0.3"
hex = "0.4"
