[package]
name = "dbstudio-driver-redis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Redis driver for dbstudio."

[dependencies]
dbstudio-core = { path = "../../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
redis = { workspace = true }
